@@ -10,6 +10,7 @@
    artist albums.
 6. Fix updating of playqueue sidebar tooltip and icon.
 7. Add playqueue action to main window, so that shortcut works.
+8. When usng track organizer, also try to move artist and backdrop images.
 
 1.3.3
 -----
